--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.1",
     "react-qr-code": "latest",
+    "react-qr-reader-es6": "^2.2.1-2",
     "react-qr-scanner": "^1.0.0-alpha.11",
     "react-resizable-panels": "^2.1.7",
     "recharts": "2.15.0",
