--- a/package.json
+++ b/package.json
@@ -54,13 +54,13 @@
     "input-otp": "1.4.1",
     "kerberos": "latest",
     "lucide-react": "^0.454.0",
-    "mongodb": "latest",
+    "mongodb": "^7.1.0",
     "mongodb-client-encryption": "latest",
-    "next": "15.1.0",
+    "next": "latest",
     "next-themes": "^0.4.4",
-    "react": "^18.3.1",
+    "react": "latest",
     "react-day-picker": "^9.6.3",
-    "react-dom": "^18.3.1",
+    "react-dom": "latest",
     "react-hook-form": "^7.54.1",
     "react-qr-code": "latest",
     "react-qr-reader-es6": "^2.2.1-2",
